--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <h1>Connor is a queer</h1>
+
+<script src="jquery.js"></script>
+<script src="typed.js"></script>
+<script>
+    $(function(){
+        $(".element").typed({
+            strings: ["First sentence.", "Second sentence."],
+            typeSpeed: 0
+        });
+    });
+</script>
+...
+
+<span class="element"></span>
