--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h1>Connor is a queer</h1>
 
-<script src="jquery.js"></script>
-<script src="typed.js"></script>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="js/typed.js"></script>
 <script>
     $(function(){
         $(".element").typed({
