--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
 
 
-
-
 <script>
     $(function(){
         $(".element").typed({
@@ -23,8 +21,8 @@
         });
     });
 </script>
-...
-  <div class="typed">
+
+  <div class="im">
     <span class="element"></span>
   </div>
 </body>
