Fixed again maybe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     });
 </script>
 
-  <div class="im">
+  <!-- <div class="im"> -->
     <span class="element"></span>
-  </div>
+  <!-- </div> -->
 </body>
