--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <title>Jordan Jones</title>
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/typed.js"></script>
 </head>
 
