--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             // show cursor
             showCursor: true,
             // character for cursor
-            cursorChar: "|",
+            cursorChar: "|"
         });
     });
 </script>
