--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     $(function(){
         $(".element").typed({
             strings: ["I'm a Developer", "I'm a Student"],
-            typeSpeed: 0
+            typeSpeed: 0,
             // show cursor
             showCursor: true,
             // character for cursor
