--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
     $(function(){
         $(".element").typed({
-            strings: ["I'm a Developer", "I'm a Student"],
+            strings: ["I'm a Student", "I'm a Web Developer", "I love servers, ^2000 and pizza", "I'm Jordan"],
             typeSpeed: 0,
             // show cursor
             showCursor: true,
