I push at every change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     });
 </script>
 
-  <!-- <div class="im"> -->
+  <div class="im" align="center">
     <span class="element"></span>
-  <!-- </div> -->
+  </div>
 </body>
