--- a/index.html
+++ b/index.html
@@ -25,4 +25,10 @@
   <div class="im" align="center">
     <span class="element"></span>
   </div>
+
+  <div class="outerDiv">
+    <div class="innerDiv">
+      <img src="img/jordan.jpg" class="img">
+    </div>
+  </div>
 </body>
