--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             // show cursor
             showCursor: true,
             // character for cursor
-            cursorChar: "|"
+            cursorChar: "|",
+            typeSpeed: 50,
         });
     });
 </script>
