--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             showCursor: true,
             // character for cursor
             cursorChar: "|",
-            typeSpeed: 50,
+            typeSpeed: 40,
         });
     });
 </script>
@@ -27,9 +27,13 @@
     <span class="element"></span>
   </div>
 
-  <div class="outerDiv">
-    <div class="innerDiv">
-      <img src="img/jordan.jpg" class="img">
-    </div>
+  <div class="about">
+      <div align="center">
+        <img src="img/jordan.jpg" class= "img">
+      </div>
+
+    <p class="about">Hi, my name is Jordan Jones, and I am a developer. I have been developing webistes for about four
+    years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
+    Also, I am in the preliminary stages of creating my first iOS app.</p>
   </div>
 </body>
