--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
     $(function(){
         $(".element").typed({
-            strings: ["I'm a Student", "I'm a Web Developer", "I love servers, ^1000 and pizza", "I'm Jordan"],
+            strings: ["I'm a Student", "I'm a Web Developer", "I love servers, ^900 and pizza", "I'm Jordan"],
             typeSpeed: 0,
             // show cursor
             showCursor: true,
@@ -22,18 +22,20 @@
         });
     });
 </script>
+<div class="imbackground col-12">
 
   <div class="im" align="center">
     <span class="element"></span>
   </div>
+</div>
 
   <div class="about">
       <div align="center">
         <img src="img/jordan.jpg" class= "img">
       </div>
-
+      <h1 class="about">Jordan <strong>Jones</strong></h1>
     <p class="about">Hi, my name is Jordan Jones, and I am a developer. I have been developing webistes for about four
     years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
-    Also, I am in the preliminary stages of creating my first iOS app.</p>
+    Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
   </div>
 </body>
