--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div align="center">
         <img src="img/jordan.jpg" class= "img">
       </div>
-      <h1 class="about">Jordan <strong>Jones</strong></h1>
-    <p class="about">Hi, my name is Jordan Jones, and I am a developer. I have been developing webistes for about four
+      <h1 class="aboutname">Jordan <strong>Jones</strong></h1>
+    <p class="about">Hi, my name is Jordan, and I am a web developer. I have been developing webistes for about four
     years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
     Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
   </div>
