Fixed some and broke some

--- a/index.html
+++ b/index.html
@@ -38,4 +38,10 @@
     years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
     Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
   </div>
+  <div class="contact col-12">
+    <div align="center">
+      <h1 class="header">Contact me!</h1>
+    </div>
+
+  </div>
 </body>
