--- a/index.html
+++ b/index.html
@@ -34,14 +34,23 @@
       <div align="center">
         <img src="img/jordan.jpg" class= "img">
       </div>
-      <h1 class="aboutname">Jordan <strong>Jones</strong></h1>
+      <h1 class="aboutname">Jordan <b>Jones</b></h1>
     <p class="about">Hi, my name is Jordan, and I am a web developer. I have been developing webistes for about four
     years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
     Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
   </div>
+</div>
+<div class="work">
+  <div align="center">
+    <h1 class="work">Work</h1>
+  </div>
+</div>
   <div class="contact col-12">
     <div align="center">
       <h1 class="header">Contact me!</h1>
+      <p class="contact">
+        Need to get in touch? Drop me a line!
+      </p>
     </div>
 
   </div>
