Fixed white spot

--- a/index.html
+++ b/index.html
@@ -28,23 +28,19 @@
   <div class="im" align="center">
     <span class="element"></span>
   </div>
-</div>
-
   <div class="about">
-      <div align="center">
-        <img src="img/jordan.jpg" class= "img">
+    <div>
+      <img src="img/jordan.jpg" class= "img">
+    </div>
+      <div>
+        <h1 class="headline">Jordan Jones</h1>
+
+        <p class="abouttxt">Hi, my name is Jordan, and I am a web developer. I have been developing webistes for about four
+        years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
+        Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
       </div>
-      <h1 class="aboutname">Jordan <b>Jones</b></h1>
-    <p class="about">Hi, my name is Jordan, and I am a web developer. I have been developing webistes for about four
-    years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
-    Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
-  </div>
-</div>
-<div class="work">
-  <div align="center">
-    <h1 class="work">Work</h1>
-  </div>
-</div>
+    </div>
+
   <div class="contact col-12">
     <div align="center">
       <h1 class="header">Contact me!</h1>
