--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="http://fonts.googleapis.com/css?family=Raleway:100&v1" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <title>Jordan Jones</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/typed.js"></script>
+
 </head>
 
 
@@ -41,12 +43,38 @@
       </div>
     </div>
 
+  <div align="center" class="whatido">
+      <h1>What I Do</h1>
+    <div class="coffee">
+      <i class="fa fa-coffee fa-2x"></i>
+    </div>
+    <div class="cog1">
+      <i class="fa fa-cog fa-1x fa-spin"></i>
+    </div>
+    <div class="cog2">
+      <i class="fa fa-cog fa-1x fa-spin"></i>
+    </div>
+    <div class="cog1">
+      <i class="fa fa-cog fa-1x fa-spin"></i>
+    </div>
+    <div class="code">
+      <i class="fa fa-code fa-2x"></i>
+    </div>
+  </div>
+
   <div class="contact col-12">
     <div align="center">
       <h1 class="header">Contact me!</h1>
-      <p class="contact">
+      <h2 class="contact">
         Need to get in touch? Drop me a line!
-      </p>
+      </h2>
+      <div class="icons">
+        <i class="fa fa-twitter-square fa-2x"></i>
+        <i class="fa fa-github-square fa-2x"></i>
+        <i class="fa fa-reddit-square fa-2x"></i>
+        <i class="fa fa-envelope-square fa-2x"></i>
+      </div>
+
     </div>
 
   </div>
