--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="about">
     <div>
-      <img src="img/jordan.jpg" class= "img">
+      <img src="img/jordan.jpg" class= "img fa-spin">
     </div>
       <div>
         <h1 class="headline">Jordan Jones</h1>
