A lot of changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="http://fonts.googleapis.com/css?family=Raleway:100&v1" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="font-awesome-animation.css">
 <title>Jordan Jones</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/typed.js"></script>
@@ -68,14 +69,23 @@
       <h2 class="contact">
         Need to get in touch? Drop me a line!
       </h2>
-      <div class="icons">
-        <i class="fa fa-twitter-square fa-2x"></i>
-        <i class="fa fa-github-square fa-2x"></i>
-        <i class="fa fa-reddit-square fa-2x"></i>
-        <i class="fa fa-envelope-square fa-2x"></i>
-      </div>
 
+      <div class="icons">
+        <a class="icon" href="https://twitter.com/jordan_jones98"><i class="fa fa-twitter-square fa-2x"></i></a>
+        <a class="icon" href="https://github.com/jordanjones98"><i class="fa fa-github-square fa-2x"></i></a>
+        <a class="icon" href="https://www.reddit.com/user/jordanjones98"><i class="fa fa-reddit-square fa-2x"></i></a>
+        <a class="icon" href="mailto:jordan@jordanalanjones.me?Subject=Contact Me!"><i class="fa fa-envelope-square fa-2x"></i></a>
+      </div>
     </div>
+  <div class="footer">
+    <div align="center">
+      <p class="footer">
+        Mail icon not working? Email me directly at jordan@jordanalanjones.me.
+      </p>
+    </div>
+
+  </div>
+
 
   </div>
 </body>
