--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
     <div class="code">
       <i class="fa fa-code fa-2x"></i>
     </div>
+    <p class="do">
+      I turn <i class="fa fa-coffee fa-1x"></i> into beautiful <i class="fa fa-code fa-1x"></i>. I have had a passion for computers for many years, but have just stepped heavily into the
+      coding game. I have always found it amazing that anyone can manipulate a computer in such a way and make great products. I am in love with code, and hope that you share a simmilar
+      passion!
+    </p>
   </div>
 
   <div class="contact col-12">
