Added more into Who I am

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
   <div align="center" class="whatido">
-      <h1>What I Do</h1>
+      <h1>Who I am</h1>
     <div class="coffee">
       <i class="fa fa-coffee fa-2x"></i>
     </div>
@@ -73,8 +73,10 @@
     </div>
     <p class="do">
       I turn <i class="fa fa-coffee fa-1x"></i> into beautiful <i class="fa fa-code fa-1x"></i>. I have had a passion for computers for many years, but have just stepped heavily into the
-      coding game. I have always found it amazing that anyone can manipulate a computer in such a way and make great products. I am in love with code, and hope that you share a simmilar
-      passion!
+      coding game. I have always found it amazing that anyone can manipulate a computer in such a way and make great products. I started coding when I was a freshman in high school.
+      Ever sense that class I have loved code. Sadly after my freshman year I stopped coding. In the past two months, I have started back up! Now I have multiple projects I am working on
+      to widen my portfolio. If you would like me to build your webiste, feel free to shoot me an email at jordan@jordanalanjones.me or use the Contact Me page below! I am in love with code,
+      and hope that you share a simmilar passion! 
     </p>
   </div>
 
