--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       coding game. I have always found it amazing that anyone can manipulate a computer in such a way and make great products. I started coding when I was a freshman in high school.
       Ever sense that class I have loved code. Sadly after my freshman year I stopped coding. In the past two months, I have started back up! Now I have multiple projects I am working on
       to widen my portfolio. If you would like me to build your webiste, feel free to shoot me an email at jordan@jordanalanjones.me or use the Contact Me page below! I am in love with code,
-      and hope that you share a simmilar passion! 
+      and hope that you share a simmilar passion!
     </p>
   </div>
 
@@ -88,9 +88,9 @@
       </h2>
 
       <div class="icons">
-        <a class="icon" href="https://twitter.com/jordan_jones98"><i class="fa fa-twitter-square fa-2x"></i></a>
-        <a class="icon" href="https://github.com/jordanjones98"><i class="fa fa-github-square fa-2x"></i></a>
-        <a class="icon" href="https://www.reddit.com/user/jordanjones98"><i class="fa fa-reddit-square fa-2x"></i></a>
+        <a class="icon" href="https://twitter.com/jordan_jones98" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+        <a class="icon" href="https://github.com/jordanjones98" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+        <a class="icon" href="https://www.reddit.com/user/jordanjones98" target="_blank"><i class="fa fa-reddit-square fa-2x"></i></a>
         <a class="icon" href="mailto:jordan@jordanalanjones.me?Subject=Contact Me!"><i class="fa fa-envelope-square fa-2x"></i></a>
       </div>
     </div>
