Found out how to do @media

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="http://fonts.googleapis.com/css?family=Raleway:100&v1" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="font-awesome-animation.css">
 <title>Jordan Jones</title>
