Pic looking good

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-  <div align="center" class="whatido">
+  <div align="center" class="whatido color">
       <h1>Who I am</h1>
     <div class="coffee">
       <i class="fa fa-coffee fa-2x"></i>
