--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div align="center" class="whatido backgroundwid">
       <h1>Who I am</h1>
     <div class="coffee">
-      <i class="fa fa-coffee fa-2x"></i>
+      <i class="fa fa-coffee fa-2x animation"></i>
     </div>
     <div class="cog1">
       <i class="fa fa-cog fa-1x fa-spin"></i>
@@ -70,7 +70,7 @@
       <i class="fa fa-cog fa-1x fa-spin"></i>
     </div>
     <div class="code">
-      <i class="fa fa-code fa-2x"></i>
+      <i id="animated-example" class="fa fa-code fa-2x animation fadeInDown"></i>
     </div>
     <p class="do">
       I turn <i class="fa fa-coffee fa-1x"></i> into beautiful <i class="fa fa-code fa-1x"></i>. I have had a passion for computers for many years, but have just stepped heavily into the
