--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
   <div align="center" class="whatido backgroundwid">
-      <h1>Who I am</h1>
+      <h1>Who I Am</h1>
     <div class="coffee">
       <i class="fa fa-coffee fa-2x animation"></i>
     </div>
