--- a/index.html
+++ b/index.html
@@ -75,10 +75,19 @@
     <p class="do">
       I turn <i class="fa fa-coffee fa-1x"></i> into beautiful <i class="fa fa-code fa-1x"></i>. I have had a passion for computers for many years, but have just stepped heavily into the
       coding game. I have always found it amazing that anyone can manipulate a computer in such a way and make great products. I started coding when I was a freshman in high school.
-      During that class I developed my love of coding. Sadly, after my freshman year I stopped coding. After a brief coffee break I am back! Now I am working on multiple projects that will
-      enhance my portfolio. If you would like me to build your webiste, feel free to shoot me an email at jordan@jordanalanjones.me, or use the Contact Me page below! I am in love with code,
+      During that class I developed my love of coding. Sadly, I stopped coding. After a brief coffee break, I am back! Now I am working on multiple projects that will
+      enhance my portfolio. If you would like me to build your webiste, feel free to shoot me an email at jordan@jordanalanjones.me, or use the Contact Me section below! I am in love with code,
       and hope that you share a simmilar passion!
     </p>
+
+  </div>
+  <div class="portfolio">
+    <div>
+      <div class="portfolioimg">Image 1</div>
+      <div class="portfolioimg">Image 2</div>
+      <div class="portfolioimg"><img src="img/sumbits.jpg" /></div>
+    <div style="clear:both"></div>
+</div>
 
   </div>
 
