--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div>
         <h1 class="headline">Jordan Jones</h1>
 
-        <p class="abouttxt">Hi, my name is Jordan, and I am a web developer. I have been developing webistes for about four
+        <p class="abouttxt">Hi, my name is Jordan, and I am a web developer. I have been developing websites for about four
         years, but have just started to get heavily into it. Right now I am learning many new languages, but am focusing on CSS, AngularJS, and HTML.
         Also, I am in the preliminary stages of creating my first iOS app. My favorite food is pizza.</p>
       </div>
