--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
     <div align="center">
       <h1 class="header">Contact me!</h1>
       <h2 class="contact">
-        Need to get in touch? Drop me a line!
+        Want to get in touch? Have a project for me? Drop me a line!
       </h2>
 
       <div class="icons">
         <a class="icon" href="https://twitter.com/jordan_jones98" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
         <a class="icon" href="https://github.com/jordanjones98" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
         <a class="icon" href="https://www.reddit.com/user/jordanjones98" target="_blank"><i class="fa fa-reddit-square fa-2x"></i></a>
-        <a class="icon" href="mailto:jordan@jordanalanjones.me?Subject=Contact Me!"><i class="fa fa-envelope-square fa-2x"></i></a>
+        <a class="icon" href="mailto:me@jordanjones.xyz?Subject=Contact Me!"><i class="fa fa-envelope-square fa-2x"></i></a>
       </div>
     </div>
   <div class="footer">
     <div align="center">
       <p class="footer">
-        Mail icon not working? Email me directly at jordan@jordanalanjones.me.
+        Mail icon not working? Email me directly at me@jordanjones.xyz.
       </p>
     </div>
 
