added blog page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     });
 </script>
 <div class="imbackground col-12">
-
+<div class="anouncement">
+  <p class="anouncement">
+    I now have a blog! Check it out <a href="blog.html">Here</a>
+  </p>
+</div>
   <div class="im" align="center">
     <span class="element"></span>
   </div>
