--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 <body>
 <div class="row">
 
-  <div class="four columns blog">
+  <div class="four columns blogleft">
     <script async src="https://static.medium.com/embed.js"></script>
     <a class="m-story" data-collapsed="true" href="https://medium.com/@jordan_jones98/my-new-years-resolutions-for-all-to-see-21776dd87759">
     My New Years Resolutions, For All To See</a>
@@ -24,7 +24,7 @@
     <a class="m-story" data-collapsed="true" href="https://medium.com/@jordan_jones98/my-new-years-resolutions-for-all-to-see-21776dd87759">
     My New Years Resolutions, For All To See</a>
   </div>
-  <div class="four columns blog">
+  <div class="four columns blogright">
     <script async src="https://static.medium.com/embed.js"></script>
     <a class="m-story" data-collapsed="true" href="https://medium.com/@jordan_jones98/my-new-years-resolutions-for-all-to-see-21776dd87759">
     My New Years Resolutions, For All To See</a>
